# axum-practice

./: Cargo.toml
src/: error.rs  lib.rs  main.rs
src/handlers/: api.rs
src/middlewares/: error_message.rs  fallbacks.rs  mod.rs  timeout.rs
